--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -100,9 +100,10 @@
     .auth-container {
         margin: 0;
         margin-top: 12px;
-        width: 85%;
+        width: 100%;
     }
     .event-content{
         height: auto;
+        padding: 10px;
     }
 }
