--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -100,9 +100,11 @@
     .auth-container {
         margin: 0;
         margin-top: 12px;
-        width: 85%;
+        width: 100%;
+        max-height: 67%;
     }
     .event-content{
         height: auto;
+        padding: 2px;
     }
 }
