--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -3,7 +3,7 @@
         <mat-card class="event-card">
             <mat-card-title>{{ event.title }}</mat-card-title>
             <mat-card-subtitle>{{ event.date }} | {{ event.location }}</mat-card-subtitle>
-            <mat-card-content>
+            <mat-card-content class="content">
                 <p class="description">{{ event.description }}</p>
             </mat-card-content>
             <mat-card-actions>
