--- a/src/app/events/event-form/event-form.component.scss
+++ b/src/app/events/event-form/event-form.component.scss
@@ -27,3 +27,12 @@
     display: flex;
     justify-content: space-between;
 }
+
+
+
+@media (max-width: 768px) {
+    .event-form-card {
+        max-width: 350px;
+        height: 80%;
+    }
+}
