--- a/src/app/events/event-list/event-list.component.scss
+++ b/src/app/events/event-list/event-list.component.scss
@@ -96,7 +96,15 @@
         padding: 10px;
     }
 
+    .event-list{
+        padding: 10px;
+    }
+
     .event-card {
-        padding: 12px;
+        padding: 8px;
+    }
+
+    .event-card p{
+        margin: 0;
     }
 }
